# Drone-Project-FLAP

./: README.md
Test1/: CMakeLists.txt  package.xml
Test1/src/: test1.cpp
Test1/srv/: SetVariables.srv
Test2/: CMakeLists.txt  package.xml
Test2/src/: test2.cpp
Test3/: CMakeLists.txt  package.xml
Test3/src/: test3.cpp
Test3/srv/: SetVariables.srv
Test4/: CMakeLists.txt  package.xml
Test4/src/: test4.cpp
Test4/srv/: SetVariables.srv
bagfiles/: 2019-01-04-16-33-22.bag  2019-01-04-16-36-38.bag  2019-01-04-16-46-33.bag  2019-01-04-16-47-34.bag  2019-01-04-16-57-11.bag  2019-01-04-16-58-40.bag  2019-01-09-13-42-26.bag
bagfiles/Matlab/: README.md  rosbag_imu.m  rosbag_motor_speed.m  rosbag_odomety.m  rosbag_rc.m
control/: CMakeLists.txt  package.xml
control/include/: biquad.cpp  biquad.h
control/src/: .control.cpp.svs  .control.cpp.svt  .control.cpp.svu  .control.cpp.svv  .control.cpp.svx  .control.cpp.svy  .control.cpp.svz  .control.cpp.swa  .control.cpp.swc  .control.cpp.swd  .control.cpp.swe  .control.cpp.swf  .control.cpp.swg  .control.cpp.swh  .control.cpp.swj  .control.cpp.swk  .control.cpp.swl  .control.cpp.swm  .control.cpp.swo  .control.cpp.swp  control.cpb~  control.cpc~  control.cpd~  control.cpf~  control.cpg~  control.cpi~  control.cpj~  control.cpk~  control.cpl~  control.cpm~  control.cpn~  control.cpo~  control.cpp  control.cpp.autosave  control.cpp~  control.cpq~  control.cpr~  control.cps~  control.cpt~  control.cpu~  (+5 more)
control/srv/: .SetGains.srv.swp  SetGains.srv  SetLimits.srv  SetPositionReference.srv
math/inc/: biquad.h
(+7 files in other folders)
